docs: agregando la documentacion de la relacion post - image con swagger
