# src/controllers/publicacionesImagenes.controllers.js
@@ -1,6 +1,33 @@
 const { Post_image } = require('../models')
 
 const agregarImagenAPost = async (req, res) => {
+    /* #swagger.tags = ['Publicaciones']
+    #swagger.summary = 'Agregar una imagen a una publicación'
+    #swagger.parameters['id'] = {
+        in: 'path',
+        description: 'ID de la publicación',
+        required: true,
+        type: 'integer'
+    }
+    #swagger.requestBody = {
+        required: true,
+        content: {
+            "application/json": {
+                schema: { "$ref": "#/components/schemas/ImagenNueva" }
+            }
+        }
+    }
+    #swagger.responses[201] = {
+        description: 'Imagen agregada exitosamente.'
+    }
+    #swagger.responses[400] = {
+        description: 'El parametro url de la imagen es incorrecto'
+    }
+    #swagger.responses[404] = {
+        description: 'Publicacion no encontrada.'
+    }
+*/
+
 
     try {
 
@@ -19,6 +46,22 @@ const agregarImagenAPost = async (req, res) => {
 }
 
 const obtenerImagenesDeUnPost = async (req, res) => {
+    /* #swagger.tags = ['Publicaciones']
+    #swagger.summary = 'Obtener todas las imágenes de una publicación'
+    #swagger.parameters['id'] = {
+        in: 'path',
+        description: 'ID de la publicación',
+        required: true,
+        type: 'integer'
+    }
+    #swagger.responses[200] = {
+        description: 'Imágenes retornadas exitosamente.'
+    }
+    #swagger.responses[404] = {
+        description: 'Publicacion no encontrada.'
+    }
+    */
+
 
     try {
 
@@ -44,6 +87,28 @@ const obtenerImagenesDeUnPost = async (req, res) => {
 }
 
 const eliminarImagen = async (req, res) => {
+    /* #swagger.tags = ['Publicaciones']
+    #swagger.summary = 'Eliminar una imagen de una publicación'
+    #swagger.parameters['postId'] = {
+        in: 'path',
+        description: 'ID de la publicación',
+        required: true,
+        type: 'integer'
+    }
+    #swagger.parameters['imageId'] = {
+        in: 'path',
+        description: 'ID de la imagen',
+        required: true,
+        type: 'integer'
+    }
+    #swagger.responses[200] = {
+        description: 'Imagen eliminada exitosamente.'
+    }
+    #swagger.responses[404] = {
+        description: 'Imagen no encontrada.'
+    }
+    */
+
     try {
 
         const {id} = req.imagen
